# tlscope

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
src/tls_analyzer/: __init__.py  __main__.py  cert.py  cli.py
src/tlscope/: __main__.py  cli.py  tls.py
tests/: README.md  __init__.py  client.py  generate_certs.sh  server.py  test_cert.py  test_cli.py  test_tls.py
