[project]
name = "tlscope"
version = "0.1.0"
description = "Analyze the use of TLS"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cryptography>=43.0.0",
    "requests>=2.32.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

#[tool.hatch.build.targets.wheel]
#packages = ["src/tlscope"]

[project.scripts]
tlscope = "tlscope.cli:main"

[tool.uv]
link-mode = "copy"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]
